--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div id="wrapper">
   <div id="blurb">
-    <p>This is a graph of the characters I have played against online in Super Smash Bros. for 3DS and Wii U in 1-on-1 For Glory mode. The blue portion of each bar is from the Wii U version, and the red portion of each bar is from the 3DS version. For reference, the first match recorded was at the end of March 2015, and the last match recorded is on June 13th, the day before Lucas, Roy, and Ryu were released (when I get more data, they will appear on this chart, as well). It might be interesting to compare this chart to Event Hubs's <a href="http://www.eventhubs.com/tiers/ssb4/">Tier List</a> and especially its <a href="http://www.eventhubs.com/stats/ssb4/">Character Popularity List</a>.</p>
+    <p>This is a graph of the characters I have played against online in Super Smash Bros. for 3DS and Wii U in 1-on-1 For Glory mode. The blue portion of each bar is from the Wii U version, and the red portion of each bar is from the 3DS version. For reference, the first match recorded was at the end of March 2015, and the last match recorded was on June 13th, the day before Lucas, Roy, and Ryu were released (when I get more data, they will appear on this chart, as well). It might be interesting to compare this chart to Event Hubs's <a href="http://www.eventhubs.com/tiers/ssb4/">Tier List</a> and especially its <a href="http://www.eventhubs.com/stats/ssb4/">Character Popularity List</a>.</p>
     <p>There are a few options to filter, order, and highlight the results <a id="toggle_filter_instructions">(Click to hide)</a>:</p>
     <ul id="filter_instructions">
       <li>Filter by details:
