--- a/StrategyGame/index.html
+++ b/StrategyGame/index.html
@@ -81,7 +81,11 @@
 	<!--script src="https://code.jquery.com/jquery-3.0.0.min.js"
 		integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="
 		crossorigin="anonymous"></script--> 
-	<script src="jquery-2.2.3.min.js"></script>
+	<!--script src="jquery-2.2.3.min.js"></script-->
+	<script
+			  src="https://code.jquery.com/jquery-3.1.0.min.js"
+			  integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="
+			  crossorigin="anonymous"></script>
 	<script src="game.js"></script>
 	<script>
 	function main() {
