factoring out code to switch game phase

--- a/StrategyGame/index.html
+++ b/StrategyGame/index.html
@@ -111,12 +111,12 @@
 
 		// var aladdin = new Character("Sun", "\u{2600}", "日", {HP: 30, movement: 3}, 0, 1, Alignment.PLAYER, spear);
 		// var badroulbadour = new Character("Moon", "\u{1F319}", "月", {HP: 30, movement: 2}, 0, 7, Alignment.PLAYER, tome);
-		var peach = new Character("Peach", "\u{1F351}", {HP: 30, movement: 4}, 0, 1, Alignment.PLAYER, spear);
-		var daisy = new Character("Daisy", "\u{1F33C}", {HP: 30, movement: 3}, 0, 7, Alignment.PLAYER, tome);
-		var daisy = new Character("Link", "\u{1F517}", {HP: 30, movement: 4}, 0, 4, Alignment.PLAYER, sword);
-		var cloud = new Character("Cloud", "\u{2601}", {HP: 30, movement: 4}, 5, 0, Alignment.ENEMY, spear);
-		var squall = new Character("Squall", "\u{1F300}", {HP: 30, movement: 3}, 5, 6, Alignment.ENEMY, tome);
-		var electrode = new Character("Electrode", "\u{1F50C}", {HP: 30, movement: 4}, 5, 3, Alignment.ENEMY, sword);
+		var peach = new Character("Peach", "\u{1F351}", {HP: 30, movement: 4}, 0, 0, Alignment.PLAYER, spear);
+		var daisy = new Character("Daisy", "\u{1F33C}", {HP: 30, movement: 3}, 0, 3, Alignment.PLAYER, tome);
+		var daisy = new Character("Link", "\u{1F517}", {HP: 30, movement: 4}, 0, 6, Alignment.PLAYER, sword);
+		var cloud = new Character("Cloud", "\u{2601}", {HP: 30, movement: 4}, 2, 0, Alignment.ENEMY, spear);
+		var squall = new Character("Squall", "\u{1F300}", {HP: 30, movement: 4}, 2, 3, Alignment.ENEMY, sword);
+		var electrode = new Character("Robin", "\u{1F426}", {HP: 30, movement: 3}, 2, 6, Alignment.ENEMY, tome);
 
 		
 	}
