added making characters inactive

--- a/StrategyGame/index.html
+++ b/StrategyGame/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Thinggy</title>
+	<title>Among the Astral Planes</title>
 
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div id="header">
-		<h1>Thinggy</h1>
+		<h1>Currently: </h1>
 	</div>
 	<div id="debug">
 		<p id="debug_state"></p>
@@ -114,9 +114,9 @@
 		var peach = new Character("Peach", "\u{1F351}", {HP: 30, movement: 4}, 0, 0, Alignment.PLAYER, spear);
 		var daisy = new Character("Daisy", "\u{1F33C}", {HP: 30, movement: 3}, 0, 3, Alignment.PLAYER, tome);
 		var daisy = new Character("Link", "\u{1F517}", {HP: 30, movement: 4}, 0, 6, Alignment.PLAYER, sword);
-		var cloud = new Character("Cloud", "\u{2601}", {HP: 30, movement: 4}, 2, 0, Alignment.ENEMY, spear);
-		var squall = new Character("Squall", "\u{1F300}", {HP: 30, movement: 4}, 2, 3, Alignment.ENEMY, sword);
-		var electrode = new Character("Robin", "\u{1F426}", {HP: 30, movement: 3}, 2, 6, Alignment.ENEMY, tome);
+		var cloud = new Character("Cloud", "\u{2601}", {HP: 30, movement: 4}, 6, 0, Alignment.ENEMY, spear);
+		var squall = new Character("Squall", "\u{1F300}", {HP: 30, movement: 4}, 6, 3, Alignment.ENEMY, sword);
+		var electrode = new Character("Robin", "\u{1F426}", {HP: 30, movement: 3}, 6, 6, Alignment.ENEMY, tome);
 
 		
 	}
